Ajuste para optimizar el codigo