@@ -19,12 +19,13 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 @Service
 public class TokenServiceImpl implements TokenService {
     private final UserRepository userRepository;
-    public final Integer seconds = Integer.valueOf("3600") ;
+    public final Integer seconds = Integer.valueOf("3600");
     private static final String SECRET = "Aqt&fNpb9^0i*Xs!94v2v3Ijrp5T0vVQy6wussLv$Bw9$p%9rpW0Yb9rI&5R0yDRI8J25lt^*iSoK@1b8vSz3dy1r5sx#GLFC$tq";
+
     @Autowired
     public TokenServiceImpl(UserRepository userRepository) {
         this.userRepository = userRepository;
@@ -34,14 +35,16 @@ public class TokenServiceImpl implements TokenService {
     @Transactional
     public Optional<TokenDto> generateTokenUser(String email) {
         Optional<UserEntity> user = userRepository.findByEmail(email);
-        if(user.isPresent()){
+        if (user.isPresent()) {
             String jwt = "";
             Instant now = Instant.now();
 
 
             jwt = Jwts.builder().setSubject(email)
                     .claim("authorities",
-                            getRolesByUser(user.get()).stream().map(GrantedAuthority::getAuthority).collect(Collectors.toList()))
+                            getRolesByUser(user.get()).stream().map(GrantedAuthority::getAuthority)
+                                    .toList()
+                    )
                     .setIssuedAt(Date.from(now)).setExpiration(Date.from(now.plus(seconds, ChronoUnit.SECONDS)))
                     .signWith(SignatureAlgorithm.HS512, TextCodec.BASE64.encode(SECRET)).compact();
 
@@ -53,13 +56,14 @@ public class TokenServiceImpl implements TokenService {
         }
         return Optional.empty();
     }
-    private List<GrantedAuthority> getRolesByUser(UserEntity user){
+
+    private List<GrantedAuthority> getRolesByUser(UserEntity user) {
         Optional<String> roleStr = user.getUserTypes().stream().map(item -> item.getType())
-                .reduce( (accumulator, type) ->  accumulator.concat(",".concat(type) ));
+                .reduce((accumulator, type) -> accumulator.concat(",".concat(type)));
         List<GrantedAuthority> grantedAuthorities;
-        if(roleStr.isPresent()) {
+        if (roleStr.isPresent()) {
             grantedAuthorities = AuthorityUtils.commaSeparatedStringToAuthorityList(roleStr.get());
-        }else{
+        } else {
             grantedAuthorities = new ArrayList<>();
         }
         return grantedAuthorities;
